objects/Customer_Interaction__b.object
<CustomObject>
 <fullName>Customer_Interaction__b</fullName>
 <fields>
  <fullName>Account__c</fullName>
  <label>User Account</label>
  <referenceTo>Account</referenceTo>
  <relationshipName>Game_User_Account</relationshipName>
  <required>true</required>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Game_Platform__c</fullName>
  <label>Platform</label>
  <length>16</length>
  <required>true</required>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>In_Game_Purchase__c</fullName>
  <label>In-Game Purchase</label>
  <length>16</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Level_Achieved__c</fullName>
  <label>Level Achieved</label>
  <length>16</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Lives_This_Game__c</fullName>
  <label>Lives Used This Game</label>
  <length>16</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Play_Date__c</fullName>
  <label>Date of Play</label>
  <required>true</required>
  <type>DateTime</type>
 </fields>
 <fields>
  <fullName>Play_Duration__c</fullName>
  <label>Play Duration</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>Score_This_Game__c</fullName>
  <label>Score This Game</label>
  <length>16</length>
  <type>Text</type>
 </fields>
 <indexes>
  <fullName>CustomerInteractionsIndex</fullName>
  <fields>
   <name>Account__c</name>
   <sortDirection>DESC</sortDirection>
  </fields>
  <fields>
   <name>Game_Platform__c</name>
   <sortDirection>ASC</sortDirection>
  </fields>
  <fields>
   <name>Play_Date__c</name>
   <sortDirection>DESC</sortDirection>
  </fields>
  <label>CustomerInteractionsIndex</label>
 </indexes>
 <label>Customer Interaction</label>
 <pluralLabel>Customer Interactions</pluralLabel>
</CustomObject>